[package]
name = "muse_sky_blog"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.13"
ic-cdk-macros = "0.15.0"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-types = "0.7.0"
serde = "1.0.204"
serde_derive = "1.0.204"
sha2 = "0.10.8"
